--- a/index_1jt20cs058.html
+++ b/index_1jt20cs058.html
@@ -40,11 +40,11 @@ How do you like to read about your favorite topics?
 What genre of movies do you like?
 <!--Select box lets you choose one of the multiple dropdown options-->
 <select name="moviepref" ><option>
-<option value=1 selected = "true">comedy
+<option value=1 >comedy
 <option value=2 >romance
 <option value=3 >thriller
 <option value=4 >horror
-<option value=5 >biopic
+<option value=5 selected = "true">biopic
 </select>
 </br></br>
 <!--submits the information entered in the form by the user -->
